<resources>
    <string name="app_name">Tip Calculator XML</string>
    <string name="calculate_tip">Calculate Tip</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="tip_percentage">Tip Percentage</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="tip_option_1">15%</string>
    <string name="tip_option_2">18%</string>
    <string name="tip_option_3">20%</string>
</resources>