<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/calculate_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/calculate_tip" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bill_amount"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:padding="16dp"
        app:startIconDrawable="@drawable/money">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/number_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/bill_amount"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tip_percentage"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:padding="16dp"
        app:startIconDrawable="@drawable/percent">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/tip_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:hint="@string/tip_percentage"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/horizontal_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/round_tip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/round_up_tip" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/round_up_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" />

    </LinearLayout>

    <TextView
        android:id="@+id/tip_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/tip_amount"
        android:textSize="35sp"
        android:textStyle="bold" />

</LinearLayout>